# datavault-modeler

./: .pre-commit-config.yaml  README.md  debug_save.py  test_enhanced_backend.py
.github/workflows/: ci.yml
backend/: README.md  backend_redesign.md  create_su.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py
backend/dvw_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/modeler/: admin.py  api.py  apps.py  models.py  tests.py  validators.py
backend/modeler/migrations/: 0001_initial.py  0002_alter_edge_id_alter_node_id.py  0003_settings.py  0004_update_settings.py  0005_add_back_canvas_settings.py  0006_settings_show_connection_points.py  0007_settings_global_columns.py  0008_auto_20250715_1911.py  0009_datamodel_description_datamodel_tags_and_more.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/dvw-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/dvw-frontend/src/: App.test.tsx  App.tsx  api.ts  index.css
frontend/dvw-frontend/src/components/: AboutDialog.tsx  Button.tsx  Card.tsx  DataVaultNode.tsx  ExportDialog.tsx  FloatingEdge.tsx  Icon.tsx  ImportDialog.tsx  ModelManager.tsx  NotificationContainer.tsx  PropertyPanel.tsx  Settings.tsx  SplashScreen.tsx
frontend/dvw-frontend/src/store/: modelStore.ts  notificationStore.ts
frontend/dvw-frontend/src/types/: columns.ts
frontend/dvw-frontend/src/utils/: edgeUtils.ts  snapToGrid.ts
