[tool.poetry]
name = "dvw-backend"
version = "0.1.0"
description = ""
authors = ["Ole Bause <ole@bause.me>"]
readme = "README.md"
packages = [{include = "dvw_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

